--- a/src/App.css
+++ b/src/App.css
@@ -24,23 +24,17 @@ body, #root {
 
 .time-input {
   appearance: none;
-  border: 1px solid #222222; /* JSX와 동일하게 */
+  border: 1px solid #222222;
   border-radius: 4px; /* 둥근 테두리 적용 */
   box-shadow: none;
-  background-color: #222222; /* JSX와 동일하게 */
+  background-color: #222222;
   color: white;
-  font-size: 1.5rem; /* JSX와 동일하게 */
-  width: 80px; /* JSX와 동일하게 */
+  font-size: 8rem;
+  width: 200px;
   text-align: center;
-  height: 40px;
+  height: 80px;
   margin-top: 5px;
   margin-bottom: 20px;
-}
-
-.time-display {
-  font-size: 1.5rem;
-  margin-bottom: 20px;
-  color: #cccccc;
 }
 
 canvas {
