--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@ body, #root {
   justify-content: center;
   align-items: center;
   background-color: black;
-  color: white; /* 텍스트 색상 */
-  overflow: hidden; /* 스크롤 제거 */
+  color: white;
+  overflow: hidden;
 }
 
 .container {
@@ -17,7 +17,6 @@ body, #root {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* height: 100vh; ❌ 이거 지우세요 */
   background-color: transparent;
   color: black;
 }
@@ -28,7 +27,7 @@ body, #root {
   border-radius: 4px; /* 둥근 테두리 적용 */
   box-shadow: none;
   background-color: transparent;
-  color: white;
+  color: #ccc;
   font-size: 6rem;
   width: 300px;
   text-align: center;
